--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             background: #fff;
             margin: -140px 50px 40px 50px;
             border-radius: 40px;
-            padding: 0px 50px;
+            padding: 0px 40px 50px 50px;
             position: relative; z-index: 10;
             box-shadow: 0 40px 120px rgba(0,0,0,0.1);
             display: flex; flex-direction: column;
